@@ -1,3 +1,9 @@
+1999-08-27  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Group/UKIRT.pm: add calc_orac_headers 
+
+	* Group/UFTI.pm (calc_orac_headers): Add calc_orac_headers
+
 1999-08-26  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame.pm (erase): Add file_exists() method.
